--- a/playground-s5e4-podcast-listening-time/pyproject.toml
+++ b/playground-s5e4-podcast-listening-time/pyproject.toml
@@ -5,6 +5,7 @@ description = "Kaggle Playground Series S5E4: Podcast Listening Time Prediction"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "catboost>=1.2.8",
     "ipykernel>=6.30.1",
     "jupyter>=1.1.1",
     "kaggle>=1.7.4.5",
@@ -15,6 +16,7 @@ dependencies = [
     "numpy>=2.3.2",
     "optuna>=4.5.0",
     "pandas>=2.3.2",
+    "python-dotenv>=1.1.1",
     "scikit-learn>=1.7.1",
     "seaborn>=0.13.2",
     "xgboost>=3.0.4",
