Add explicit .gitignore rules for experiment CSV files
- Add patterns for results/*/submission.csv and results/*/result.csv
- Ensures submission and result files are not accidentally committed
- Follows best practice of keeping experiment outputs local only

--- a/playground-s5e4-podcast-listening-time/.gitignore
+++ b/playground-s5e4-podcast-listening-time/.gitignore
@@ -130,4 +130,6 @@ logs/
 # Experiment outputs
 results/*/model.pkl
 results/*/model.joblib
+results/*/submission.csv
+results/*/result.csv
 catboost_info/
